# StorageMaster

./: .gitignore  Directory.Build.targets  README.md  StorageMaster.sln  StorageMaster.slnx  generate-icon.ps1
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODEMAP.md  DOCUMENTATION.md  ROADMAP.md  V2_PLAN.md
installer/: Build-Release.ps1  Install-WindowsAppRuntime.ps1  StorageMaster.iss
src/StorageMaster.Core/: Class1.cs  StorageMaster.Core.csproj
src/StorageMaster.Core/Cleanup/: CleanupEngine.cs
src/StorageMaster.Core/Interfaces/: IAdminService.cs  ICleanupEngine.cs  ICleanupLogRepository.cs  ICleanupRule.cs  IDriveInfoProvider.cs  IFileDeleter.cs  IFileScanner.cs  IInstalledProgramProvider.cs  IScanErrorRepository.cs  IScanRepository.cs  ISettingsRepository.cs  ISmartCleanerService.cs
src/StorageMaster.Core/Models/: AppSettings.cs  CleanupCategory.cs  CleanupProgress.cs  CleanupResult.cs  CleanupSuggestion.cs  FileEntry.cs  FileTypeCategory.cs  FolderEntry.cs  (+4 more)
src/StorageMaster.Platform.Windows/: AdminService.cs  Class1.cs  DriveInfoProvider.cs  FileDeleter.cs  InstalledProgramProvider.cs  KnownFolders.cs  RecycleBinInfoProvider.cs  StorageMaster.Platform.Windows.csproj  TurboFileScanner.cs
src/StorageMaster.Storage/: Class1.cs  StorageDbContext.cs  StorageMaster.Storage.csproj
src/StorageMaster.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  StorageMaster.UI.csproj  app.manifest
tests/StorageMaster.Tests/: StorageMaster.Tests.csproj  UnitTest1.cs
turbo-scanner/: Cargo.toml
turbo-scanner/src/: main.rs
(+60 files in other folders)
