[package]
name    = "turbo-scanner"
version = "1.4.1"
edition = "2021"
description = "High-performance parallel file system scanner for StorageMaster"

[[bin]]
name = "turbo-scanner"
path = "src/main.rs"

[dependencies]
jwalk      = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
